Released v1.4.3 Fixed major bug: binding #top_up.mouseup instead of *.mouseup for the jQuery UI draggable replacement Alerting errors occured during TopUp.display() Renamed class 'dragging' to 'tu_dragging' Adding class 'tu_overflow' when animating transform effect

--- a/public/stylesheets/top_up/style.css
+++ b/public/stylesheets/top_up/style.css
@@ -1,5 +1,8 @@
 
-.dragging {
+.tu_overflow {
+  overflow: hidden !important; }
+
+.tu_dragging {
   cursor: move !important; }
 
 #tu_overlay,
